adjust text color in event on day

--- a/src/app/day/day.component.css
+++ b/src/app/day/day.component.css
@@ -11,4 +11,12 @@
     text-overflow: ellipsis;
     display: block;
     width: 100%;
-  }
+}
+
+.dark-text {
+    color: #000;
+}
+
+.light-text {
+    color: #fff;
+}
