better scalling with low horizontal resolution

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -27,7 +27,7 @@
             <hr>
             <app-grid [year]="year" [monthNumber]="month"></app-grid>
         </div>
-        <div class="col align-items-center">
+        <div class="col align-items-center upcoming-tasks-column">
             <div style="text-align: center;">
                 <h1 style="text-align: center;">UPCOMING TASKS</h1>
 
