--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -5,8 +5,18 @@
 .padding-margin-day-string {
     padding-left: 20px;
     margin-bottom: -12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 20px;
 }
 
 .day-column {
     min-width: 20px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
 }
