--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-    <div class="row d-flex justify-content-end">
-        <div class="col padding-margin-day-string" (click)="getNumberOfWeeks()">
+    <div class="row day-row">
+        <div class="col padding-margin-day-string">
             <h4>Monday</h4>
         </div>
         <div class="col padding-margin-day-string">
