add event task improvements

--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -70,7 +70,7 @@
                     <!-- Submit Button -->
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary"
-                            [disabled]="!eventForm.valid">Add Event</button>
+                            [disabled]="!eventForm.valid" data-bs-dismiss="modal">Add Event</button>
                     </div>
                 </div>
             </form> <!-- End of form -->
