--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <form (ngSubmit)="onSubmit()" #taskForm="ngForm">
         <div class="modal-header">
-          <h5 class="modal-title" id="addTaskModalLabel">Add New Task</h5>
+          <h2 class="modal-title" id="addTaskModalLabel">Add New Task</h2>
           <button type="button" class="btn-close" data-bs-dismiss="modal"
             aria-label="Close"></button>
         </div>
@@ -72,7 +72,7 @@
           <button type="button" class="btn btn-secondary"
             data-bs-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary"
-            [disabled]="!taskForm.valid">Save
+            [disabled]="!taskForm.valid" data-bs-dismiss="modal">Save
             Task</button>
         </div>
       </form>
