--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -25,7 +25,8 @@
                         style="width: 100%; height: 100%; overflow-y: scroll; padding-right: 17px; box-sizing: content-box;">
                         <div *ngFor="let task of tasks"
                             style="padding-left: 5px; padding-top: 3px;">
-                            <span class="badge rounded-pill bg-primary truncate"
+                            <span
+                                class="badge rounded-pill bg-primary truncate border"
                                 (click)="setCurrentTask(task)"
                                 style="cursor: pointer">
                                 {{task.name}}
@@ -41,16 +42,16 @@
                         <div *ngFor="let event of events"
                             style="padding-left: 5px; padding-top: 3px;">
                             <div *ngFor="let event of events"
-                            style="padding-left: 5px; padding-top: 3px;">
-                            <span class="badge rounded-pill truncate"
-                                [class.bg-primary]="!event.color"
-                                [ngStyle]="{'background-color': event.color ? event.color : null}"
-                                [ngClass]="isLightColor(event.color) ? 'dark-text' : 'light-text'"
-                                (click)="setCurrentEvent(event)"
-                                style="cursor: pointer;">
-                                {{event.name}}
-                            </span>
-                        </div>
+                                style="padding-left: 5px; padding-top: 3px;">
+                                <span class="badge rounded-pill truncate border"
+                                    [class.bg-primary]="!event.color"
+                                    [ngStyle]="{'background-color': event.color ? event.color : null}"
+                                    [ngClass]="isLightColor(event.color) ? 'dark-text' : 'light-text'"
+                                    (click)="setCurrentEvent(event)"
+                                    style="cursor: pointer;">
+                                    {{event.name}}
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
