--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -53,4 +53,4 @@
     </div>
 </div>
 <app-add-task *ngIf="this.showAddTask"
-    (modalClosed)="this.showAddTask=false"></app-add-task>
+    (modalClosed)="this.showAddTask=false" [showAddMasterOption]="true"></app-add-task>
