--- a/src/app/searched-list/searched-list.component.html
+++ b/src/app/searched-list/searched-list.component.html
@@ -6,6 +6,7 @@
                 Tasks</h2>
             <div *ngFor="let task of tasks">
                 <app-task [task]="task"></app-task>
+                <span class="half-gap"></span>
             </div>
         </div>
         <div class="col-md-6 text-center">
@@ -13,6 +14,7 @@
                 [ngStyle]="this.themeService.isLightTheme() ? {'color': 'white'} :null">
                 Events</h2> <div *ngFor="let event of events">
                 <app-event [event]="event"></app-event>
+                <span class="half-gap"></span>
             </div>
         </div>
     </div>
