--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -17,7 +17,8 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <div class="input-group">
+                    <div class="input-group"
+                        style="padding-top: 1px; padding-bottom: 1px; margin-top: -4px; margin-bottom: -4px;">
                         <input type="text" class="form-control"
                             placeholder="Search by tags ..." aria-label="Search"
                             [(ngModel)]="searchQuery">
