--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -73,3 +73,20 @@
 <app-add-task *ngIf="this.showAddTask"
     (modalClosed)="this.showAddTask=false"
     [showAddMasterOption]="true"></app-add-task>
+
+<div aria-live="polite" aria-atomic="true" class="position-relative">
+    <div class="toast-container">
+        <div *ngFor="let toast of toasts" class="toast" role="alert"
+            aria-live="assertive" aria-atomic="true"
+            [ngClass]="{'show': toast.show, 'fade': !toast.show}">
+            <div class="toast-header">
+                <strong class="me-auto">{{ toast.header }}</strong>
+                <button type="button" class="btn-close"
+                    (click)="hideToast(toast)"></button>
+            </div>
+            <div class="toast-body">
+                {{ toast.body }}
+            </div>
+        </div>
+    </div>
+</div>
