--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -65,7 +65,8 @@
                     (click)="this.showAddEvent=true">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         width="23" height="23" fill="currentColor"
-                        class="bi bi-plus-circle" viewBox="0 0 16 16"
+                        class="bi bi-plus-circle icon-adjust"
+                        viewBox="0 0 16 16"
                         [ngStyle]="{'color': (this.themeService.isLightTheme() && this.isInViewedMonth) ? 'white' : null}">
                         <path
                             d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
